Fix overflow-x problem for mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -21,6 +21,10 @@
 
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -29,14 +33,15 @@ body{
     font-family: 'Roboto Slab', serif;
     background: linear-gradient(180deg, #ffffff, #e2e1e2);
     color: rgb(51, 51, 51);
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    /*-ms-overflow-style: none;  
+    scrollbar-width: none;  */
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
+/* 
 body::-webkit-scrollbar {
     display: none;
   }
+  */
   
 h1{
     font-size: 30px;
